--- a/app/ui/layout-components/Footer/Footer.module.css
+++ b/app/ui/layout-components/Footer/Footer.module.css
@@ -1,3 +1,4 @@
+/*By Tay King Yu, Galen*/
 .footer{
     background-color: rgb(12, 12, 119);
     font-family: 'LilitaOne', sans-serif; /*custom font*/
