--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,18 +1,10 @@
 .Container{
   position: relative;
-  background-image: url("../public/media/home-page-background.png");
-  background-size: cover;
+  background-image: url("../public/media/home-page-background.png");/* Background image sourced from https://www.reddit.com/media?url=https%3A%2F%2Fpreview.redd.it%2Fiapqmzd3zu721.jpg%3Fwidth%3D1080%26crop%3Dsmart%26auto%3Dwebp%26s%3D7508eff6f99e455258950e07bf0560e9a039c384
+  background-size: cover; */
   font-family: 'LilitaOne', sans-serif; /*custom font*/
   color: white;
-}
-.bg {
-  /* The image used /
-  background-image: url("public/media/home-page-background.png");
-
-  / Full height /
-  height: 100%;
-
-  / Center and scale the image nicely */
+  /* Center and scale the image nicely */
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
@@ -21,14 +13,14 @@
 .phonepos{
   position: relative;
   top: 35%;
-  left: 35%;
+  left: 25%;
   transform: translate(-50%, -50%);
   max-width: 100%; /* Ensure the image doesn't exceed its container's width */
   height: auto; /* Allow the height to adjust based on the aspect ratio */
 }
 
-.bodytext{
-  
-}
+
+
+
 
 
