--- a/app/events/page.module.css
+++ b/app/events/page.module.css
@@ -1,9 +1,10 @@
+/* By Teo Hong Rui Freddy */
+
 .Container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
 
 /* 
   Banner component 
