--- a/app/maps/page.module.css
+++ b/app/maps/page.module.css
@@ -73,3 +73,48 @@
   width: 100%;
   height: auto;
 }
+
+/* 
+  Map component 
+*/
+.maps_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px;
+  }
+  
+  .maps_item {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+    overflow: hidden;
+    width: calc(33.33% - 10px);
+  }
+  
+  /* Define the maps name */
+  .maps_name {
+    background-color: #4caf50;
+    color: white;
+    font-size: 18px;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  /* Define the maps image */
+  .maps_item img {
+    display: block;
+    height: 500px;
+    width: auto;
+    max-width: 100%;
+  }
+  
+  .maps_title{
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+  }
