--- a/app/events/Components/GameMode.module.css
+++ b/app/events/Components/GameMode.module.css
@@ -6,7 +6,8 @@
   margin: 0 auto;
   width: 100%;
   max-width: 1440px;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
+  
 }
 
 .gamemodetitle {
@@ -42,13 +43,14 @@
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 20px;
+  font-family: 'Nougat', sans-serif;
 }
 
 .item h2 {
   font-size: 24px;
-  font-weight: bold;
   margin-bottom: 10px;
   color: #ffffff;
+  font-family: 'LilitaOne', sans-serif;
 }
 
 /* Set background colors for each item */
