--- a/app/maps/page.module.css
+++ b/app/maps/page.module.css
@@ -58,17 +58,6 @@
   justify-content: space-between;
 }
 
-.GemGrabsection, .BrawlBallsection, .ShowDownsection {
-  width: 30%;
-  text-align: center;
-}
-
-.GemGrabsection h1, .BrawlBallsection h1, .ShowDownsection h1 {
-  font-size: 2rem;
-  font-weight: bold;
-  margin: 0;
-}
-
 .map_container img {
   width: 100%;
   height: auto;
@@ -109,6 +98,7 @@
     height: 500px;
     width: auto;
     max-width: 100%;
+    margin: 0 auto;
   }
   
   .maps_title{
