Added featureset for some files, and marked territory

--- a/app/ui/page-components/BrawlerSlider/BrawlerSlider.module.css
+++ b/app/ui/page-components/BrawlerSlider/BrawlerSlider.module.css
@@ -1,3 +1,4 @@
+/* For BrawlerSlider by Tay King Yu, Galen */
 .customSlider {
     margin: 0 -0.5rem; /* Adjust the margin to control the spacing between items */
   }
