--- a/app/events/page.module.css
+++ b/app/events/page.module.css
@@ -12,7 +12,7 @@
 */
 .banner{
   position: relative;
-  width: 100vw;
+  width: auto;
   height: 85vh; /* Set the viewport height - Accomodate for the actual height of the image overflowing out of the strating viewport, causing the need to scroll*/
   overflow: hidden;
   font-family: 'LilitaOne', sans-serif; /*custom font*/
