--- a/app/events/page.module.css
+++ b/app/events/page.module.css
@@ -12,7 +12,7 @@
 */
 .banner {
   position: relative;
-  width: 100%;  
+  width: 100%;
   max-height: 100vh;
   overflow: hidden;
   font-family: 'LilitaOne', sans-serif; /*custom font*/
@@ -49,7 +49,7 @@
 .whitebox-container {
   width: 100%;
   display: flex;
-  justify-content: left; /* Center the whitebox */
+  justify-content: left; /* Align left the whitebox */
   padding: 20px; /* Adjust padding as needed */
   box-sizing: border-box; /* Ensure padding is included in the width */
 }
