Revert "Fixed banner wdith probably"
This reverts commit b7365c8929836a447e85a217d3e445064ccc6807.

--- a/app/maps/page.module.css
+++ b/app/maps/page.module.css
@@ -5,7 +5,7 @@
 */
 .banner{
   position: relative;
-  width: 100%x;
+  width: 100vw;
   height: 85vh; /* Set the viewport height - Accomodate for the actual height of the image overflowing out of the strating viewport, causing the need to scroll*/
   overflow: hidden;
   font-family: 'LilitaOne', sans-serif; /*custom font*/
